--- a/static/application.css
+++ b/static/application.css
@@ -1,5 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;400;500;600;700&family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
 body {
-	background: #001420;
+	background: #101010;
 	padding: 20px 50px;
 	margin: 0px;
 }
@@ -13,7 +14,7 @@ textarea {
 	padding: 0px;
 	width: 100%;
 	height: 100%;
-	font-family: monospace;
+	font-family: 'Fira Code', monospace;
 	outline: none;
 	resize: none;
 	font-size: 13px;
@@ -24,14 +25,14 @@ textarea {
 /* the line numbers */
 
 #linenos {
-  color: #334753;
+  color: #727272;
 	z-index: -1000;
 	position: absolute;
 	top: 20px;
 	left: 0px;
 	width: 30px; /* 30 to get 20 away from box */
 	font-size: 13px;
-	font-family: monospace;
+	font-family: 'Fira Code', monospace;
 	text-align: right;
 	user-select: none;
 }
@@ -66,11 +67,11 @@ textarea {
 #box1 {
 	padding: 5px;
 	text-align: center;
-	background: #000D15;
+	background: #141414;
 }
 
 #box2 {
-	background: #001A2A;
+	background: #0f0f0f;
 	font-size: 0px;
 	padding: 0px 5px;
 }
@@ -116,8 +117,8 @@ textarea {
 }
 
 #box3, #messages li {
-	background: #173e48;
-	font-family: Helvetica, sans-serif;
+	background: #252525;
+	font-family: 'Inter', sans-serif;
 	font-size: 12px;
 	line-height: 14px;
 	padding: 10px 15px;
@@ -130,7 +131,7 @@ textarea {
 }
 
 #box3 .shortcut {
-	color: #c4dce3;
+	color: #555555;
 	font-weight: normal;
 }
 
